--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0"
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Jazz Wong</title>
+    <!-- Import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style.css" />
+    <!-- Import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter&family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <title>JAZZ WONG</title>
 
 </head>
 
 <body>
-<h1> VSC practice yayay</h1>
-<p>This is type, uh huh yeahhhh.</p>
-<img src="folder/ce4d1983d0aaaf6f8fdcd8961c04c66a.jpg">
+    <div class="header">
+        <div class="header"> <img src="logo.png"> </div>
+    </div>
+    <h2> *Graphic Design is My Passion</h2>
+    
+    <div class="container" id="video"></div>
+    <video autoplay muted loop id="myVideo">
+        <source src="moon.mp4" type="video/mp4">
+    </video>
+
+    <div class="container">
+        <p>
+            <div class="navigation" id="about"> 
+                <img src="flower.png"> 
+                <a href="about_me.html">&#9734; ABOUT ME &#9734;</a>
+            </div>
+            <br><br>
+
+            <div class="navigation" id="lab">
+                <img src="cat.png">
+                <a href="lab_assignments.html">&#9734; LAB ASSIGNMENTS &#9734;</a>
+            </div>
+            <br><br>
+            <div class="navigation" id="pro">
+                <img src="brush.png">
+                <a href="projects.html">&#9734; PROJECTS &#9734;</a>
+            </div>
+        </p> 
+    </div>
 </body>
 
-</html>
