--- a/lab_assignments.html
+++ b/lab_assignments.html
@@ -1,1 +1,16 @@
-<p> WORK IN PROGRESS </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style2.css" />
+    <!-- Import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter&family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <title>LAB</title>
+</head>
+
+<body>
+    <img src="Screen Shot 2023-02-09 at 11.57.13 PM.png"
+</body>
