--- a/lab_assignments.html
+++ b/lab_assignments.html
@@ -12,5 +12,6 @@
 </head>
 
 <body>
-    <img src="Screen Shot 2023-02-09 at 11.57.13 PM.png"
+    <a href="poster/index.html">&#9734; POSTER &#9734;</a>
 </body>
+</html>
