class.json + interaction project 1 update

--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,17 @@
-<p> WORK IN PROGRESS </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style2.css" />
+    <!-- Import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter&family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <title>PROJECTS</title>
+</head>
+
+<body>
+    <a href="garden_of_forking_paths/homepage.html"> &#9734; GARDEN OF FORKING PATHS &#9734;</a>
+</body>
+</html>
