--- a/depop/depop_index.html
+++ b/depop/depop_index.html
@@ -8,7 +8,7 @@
     <title>Depop - buy, sell, discover unique fashion</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8"/>
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/depop_style.css" />
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
 </head>
@@ -16,7 +16,7 @@
     </div>
     <div class="heading">
         <div class="logo">
-            <img src="depop_logo.svg.png">
+            <div id="logo"><img src="depop_logo.svg.png"></div>
         </div>
         <div class="search">
             <div id="search-text">Search for items, brands, or styles...</div>
