--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
-    <a href="garden_of_forking_paths/homepage.html"> &#9734; GARDEN OF FORKING PATHS &#9734;</a>
+    <a href="/garden_of_forking_paths/homepage.html"> &#9734; GARDEN OF FORKING PATHS &#9734;</a>
+    <br>
+    <a href="recollection/re_index.html"> &#9734; THE RE*COLLECTION &#9734;</a>
 </body>
 </html>
