--- a/lab_assignments.html
+++ b/lab_assignments.html
@@ -15,5 +15,6 @@
     <a href="poster/poster_index.html"> &#9734; POSTER &#9734;</a>
     <a href="CLASS/class.html"> &#9734; CLASS.JSON &#9734;</a>
     <a href="depop/depop_index.html">&#9734; DEPOP &#9734;</a>
+    <a href="p5_dvd/index.html">&#9734; P5 DVD SCREEN &#9734;</a>
 </body>
 </html>
