--- a/recollection/re_index.html
+++ b/recollection/re_index.html
@@ -8,9 +8,9 @@
     <title>The Re*Collection</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8"/>
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/re_style.css"/>
+    <link rel="stylesheet" href="re_style.css"/>
     <!-- Import the webpage's javascript file -->
-    <link rel="stylesheet" href="/script.js"/>
+    <link rel="stylesheet" href="script.js"/>
 
 </head>
 <body>
