--- a/projects.html
+++ b/projects.html
@@ -15,5 +15,6 @@
     <a href="/garden_of_forking_paths/homepage.html"> &#9734; GARDEN OF FORKING PATHS &#9734;</a>
     <br>
     <a href="recollection/re_index.html"> &#9734; THE RE*COLLECTION &#9734;</a>
+    <a href="starx/index.html">&#9734; STARX &#9734;</a>
 </body>
 </html>
