--- a/projects.html
+++ b/projects.html
@@ -16,5 +16,6 @@
     <br>
     <a href="recollection/re_index.html"> &#9734; THE RE*COLLECTION &#9734;</a>
     <a href="starx/index.html">&#9734; STARX &#9734;</a>
+    <a href="cafe/index.html">&#9734; NYC'S DIRTY CAFE RECEIPTS&#9734;</a>
 </body>
 </html>
