--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
     <div class="folder">
     <a href="garden_of_forking_paths/homepage.html"> &#9734; GARDEN OF FORKING PATHS &#9734;</a> <br>
-    <a href="recollection/re_index.html"> &#9734; THE RE*COLLECTION &#9734;</a> <br>
+    <a href="*recollection/index.html"> &#9734; THE RE*COLLECTION &#9734;</a> <br>
     <a href="starx/index.html">&#9734; STARX &#9734;</a> <br>
     <a href="cafe/index.html">&#9734; NYC'S DIRTY CAFE RECEIPTS&#9734;</a>
 </div>
