--- a/about_me.html
+++ b/about_me.html
@@ -28,5 +28,10 @@
     <div class="container" id="video"></div>
     <video autoplay muted loop id="myVideo">
         <source src="ocean.mp4" type="video/mp4">
+
+
     </video>
 </body>
+
+
+<img src="/image/mountain.jpg">
