--- a/javascript_studio/index.html
+++ b/javascript_studio/index.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
+    <div class="circle2"></div>
     <header></header>
     <div class="row">
-        <div class="column left" id="left" style="background-color:#aaa;">
+        <div class="column left" id="left">
             <div class="title">
-                <h1>CD STUDIO JAVASCRIPT</h1>
+                <h1>CD STUDIO: JAVASCRIPT</h1>
+                <!-- <div class="center"><h3>JAVASCRIPT</h3></div> -->
                     <div class="number">
-                        <button onclick="toggle('changing')" class="number" id="one"></button>
-                        <button onclick="toggle('gen')" class="number" id="two"></button>
-                        <button onclick="toggle('send')" class="number" id="three"></button>
+                        <button onclick="toggle('changing')" class="number one" id="one"></button>
+                        <button onclick="toggle('gen')" class="number two" id="two"></button>
+                        <button onclick="toggle('send')" class="number three" id="three"></button>
                     </div>
             </div>
+
+            <div class="circle1"></div>
+            
 
             <div id="mydiv">
                 <div id="mydivheader">
@@ -37,9 +42,9 @@
                 <h2>Changing States</h2>
             </a>
             <div class="text">
-                In UX/ UI design, “States” are visual representations used to communicate the status of a component or interactive element - there’s the “default”, “active”, “disabled” and of course the “hover state”. <br><br>
-                The concept of states represents a unique and powerful quality of the web as a medium: the ability to change content and form over time with input from a user. Websites don’t have to be static, they can react to inputs and evolve over time.<br><br>
-                Design and develop a website that’s principle focus is on changing between states. The states you choose can be a binary (day vs. night, messy vs. clean, wet vs. dry, hot vs. cold etc.) or exist more on a spectrum (the spectrum of color, temperature, sound volume, wealth, emotion etc.).
+                In UX/ UI design, “States” are visual representations used to communicate the status of a component or interactive element - there's the “default”, “active”, “disabled” and of course the “hover state”. <br><br>
+                The concept of states represents a unique and powerful quality of the web as a medium: the ability to change content and form over time with input from a user. Websites don't have to be static, they can react to inputs and evolve over time.<br><br>
+                Design and develop a website that's principle focus is on changing between states. The states you choose can be a binary (day vs. night, messy vs. clean, wet vs. dry, hot vs. cold etc.) or exist more on a spectrum (the spectrum of color, temperature, sound volume, wealth, emotion etc.).
             </div>
             </div>
             
