--- a/javascript_studio/generative_tool/generative_tool.html
+++ b/javascript_studio/generative_tool/generative_tool.html
@@ -21,12 +21,42 @@
     <div class="close" onclick="window.location.reload()">X</div>
 </div>
 <div class="header">
-    <h3>About</h3>
+    <h3 id="about">About</h3>
+    <h3>Help</h3>
+    <h3>Thanks</h3>
 </div>
 
-    <div id="sketch"></div>
+<div id="sketch"></div>
 
-    <!-- <div class="box"></div> -->
+<!-- <div id="sketch" style="position: relative;"></div> -->
+
+<div class="background">
+
+</div>
+<!-- 
+<script>
+    /* When the user clicks on the button, 
+    toggle between hiding and showing the dropdown content */
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
+    
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function(event) {
+      if (!event.target.matches('.dropbtn')) {
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+          var openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+          }
+        }
+      }
+    }
+
+
+    </script> -->
 
 
     
