--- a/javascript_studio/changing_states/index.html
+++ b/javascript_studio/changing_states/index.html
@@ -67,7 +67,7 @@
 </div>
 </div>
 
-<video autoplay muted loop class="video">
+<video autoplay muted loop id="video">
     <source src="love.mp4" type="video/mp4">
 </video>
 
