--- a/javascript_studio/index.html
+++ b/javascript_studio/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="column right" id="right">
 
-            <div class="project" id="changing" style="display: none" ><a href="changing_states/index.html">
+            <div class="project" id="changing" style="display: none" ><a href="/javascript_studio/changing_states/index.html">
                 <h2>Changing States</h2>
             </a>
             <div class="text">
@@ -57,7 +57,7 @@
             </div>
             
 
-            <div class="project" id="gen" style="display: none" ><a href="generative_tool.html">
+            <div class="project" id="gen" style="display: none" ><a href="/javascript_studio/generative_tool/generative_tool.html">
                 <h2>Generative Tool</h2>
             </a>
             <div class="text">
@@ -68,7 +68,7 @@
             </div>
 
 
-            <div class="project" id="send" style="display: none" ><a href="generative_tool.html">
+            <div class="project" id="send" style="display: none" ><a href="/javascript_studio/generative_tool/generative_tool.html">
                 <h2>Sender Receiver</h2>
             </a>
             <div class="text">
