kidpix sound affects

--- a/home.html
+++ b/home.html
@@ -34,9 +34,18 @@
 </style>
 
 <body>
+
+<!-- <body> onload="addEvent()">
+
+    <h1>click any element on the body to play sound </h1>
+    <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+ -->
+
 <h1>Jazz Wong Design</h1>
 <li><a href="/star_moles/index.html">ABOUT ME - STAR MOLES</a></li>
 <li><a href="/generative_tool/generative_tool.html">CHEESE - ASCII PHOTO BOOTH</a></li>
 <li><a href="/starx_master/starx/index.html">STARX - ARG</a></li>
+
+
 </body>
 </html>
